--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Change title</title>
+    <title>titre</title>
   </head>
   <body>
     <h1>Hello</h1>
