--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>titre</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <h1>Bonjour</h1>
     <h2>Hello, i am happy</h2>
   </body>
 </html>
